Mejora regex email, responsive de tablas perfil y reservas y estilo

--- a/assets/micss/styles.css
+++ b/assets/micss/styles.css
@@ -12,3 +12,9 @@ body{
 footer {
     color:#fff;
 }
+
+@media (max-width: 767px) { 
+        .table-responsive {
+            overflow-x: auto; 
+        }
+    }
